UNRELEASED CHANGES

  * The open() syscall supports the O_TRUNC flag now.

  * `mount.s3ql` now exits gracefully on CTRL-C (INT signal)

  * `mount.s3ql` now supports the `--dirty-block-upload-delay` option to influence the
    time before dirty blocks are written from the cache to the storage backend. 

2020-09-04, S3QL 3.5.1

  * `s3qlctrl upload-meta` now works properly again (previously, only the first
    invocation had an effect).

  * The O_TRUNC flag of the open() syscall is no longer silently ignored, but
    the open() call fails with ENOTSUP. A proper implementation will hopefully
    follow soon.


2020-07-15, S3QL 3.5.0

  * S3QL now requires version 3.x rather than 1.x of the pyfuse3 module.

  * Triggering a metadata upload (either through ``s3qlctrl upload-meta`` or the
    ``--metadata-upload-interval``) works again (since release 3.4.0, this would continue
    to upload metadata continuously after the first trigger).

  * There is new backend for accessing Backblaze B2.

2020-05-08, S3QL 3.4.1

  * Fixed mount.s3ql "NoneType can't be used in 'await' expression" crash.


2020-03-19, S3QL 3.4.0

  * There have been significant changes in the internal implementation. Asynchronous I/O
    is now used in favor of threads in many places, and libfuse 3.x is used instead of
    libfuse 2.x.

  * S3QL is now uses kernel-side writeback caching, which should significantly improve
    write performance for small block sizes.

  * The dependency on the llfuse Python module has been dropped. A dependency on the `trio
    <https://github.com/python-trio/trio`_ and `pyfuse3
    <https://github.com/libfuse/pyfuse3/>`_ modules has been added instead.


2019-10-20, S3QL 3.3.2

  * Fixed occasional crashes with "KeyError" when using Google Storage
    backend.

  * Switched to semantic versioning. An increase in the major (first) version number will
    indicate a backwards incompatible change (eg a change in the file system revision), a